--- a/index2.html
+++ b/index2.html
@@ -114,18 +114,28 @@
       </div>
     </div>
     <div id="landing">
+      <div id="" class="">
+        <img src="/img/ryanXguido.png" class="w-100" alt="" />
+      </div>
       <div id="landingImgBox" class="">
-        <div id="insidelandingBox" class="container">
-          <div style="height: 60px"></div>
-          <p
-            class="px-2"
-            style="font-size: 44px; font-weight: 700; color: rgb(231, 231, 231)"
-          >
-            Invest in your health with us
-          </p>
-          <div style="height: 60px"></div>
+        <div id="insidelandingBox" class="">
+          <div class="container">
+            <div style="height: 70px"></div>
+            <p
+              class="px-2"
+              style="
+                font-size: 44px;
+                font-weight: 700;
+                color: rgb(231, 231, 231);
+              "
+            >
+              Invest in your health with us
+            </p>
+            <div style="height: 70px"></div>
+          </div>
         </div>
       </div>
+
       <br />
 
       <div class="row mx-0 px-0">
@@ -140,10 +150,7 @@
 
           <br />
 
-          <p
-            class="p-0 m-0 text-center box"
-            style="font-size: 18px; font-weight: 700; color: #6c8dd0"
-          >
+          <p class="p-0 m-0 box" id="happyinvesting" style="">
             Happy Investing
           </p>
           <br />
@@ -151,12 +158,7 @@
         <div class="col-md-6 px-0" id="landingRight">
           <br id="mobnotbr" />
           <br />
-          <img
-            id="pose"
-            class="w-100 px-1 pe-0 boxRight"
-            src="img/pose.png"
-            alt=""
-          />
+          <img id="pose" class="w-100 px-1 pe-0" src="img/pose.png" alt="" />
           <div class="px-2 text-center" id="pose2">
             <img class="w-75 px-0 pe-0" src="img/pose2new.png" alt="" />
           </div>
