--- a/index2.html
+++ b/index2.html
@@ -105,17 +105,18 @@
     </div>
 
     <div id="navpc" class="mx-0"></div>
-    <div id="advice">
-      <div class="container text-center">
-        <p id="adviceText" class="py-2">
-          Not investing in health today cuts into your future profit : that is
-          how compounding works 😎
-        </p>
-      </div>
-    </div>
+
     <div id="landing">
       <div id="" class="">
         <img src="/img/ryanXguido.png" class="w-100" alt="" />
+      </div>
+      <div id="advice">
+        <div class="container text-center">
+          <p id="adviceText" class="py-2">
+            Not investing in health today cuts into your future profit : that is
+            how compounding works 😎
+          </p>
+        </div>
       </div>
       <div id="landingImgBox" class="">
         <div id="insidelandingBox" class="">
@@ -170,10 +171,20 @@
           <div class="col-md-7 px-0" style="margin-top: -100px">
             <div class="row mx-0">
               <div class="col-md-6 px-3 my-2 text-center">
-                <img class="w-75 boxLeft mb-3" src="img/step1alt.png" alt="" />
+                <img
+                  class="boxLeft mb-3"
+                  id="steps"
+                  src="img/step1alt.png"
+                  alt=""
+                />
               </div>
               <div class="col-md-6 px-3 my-2 text-center">
-                <img class="w-75 boxRight" src="img/step2alt.png" alt="" />
+                <img
+                  class="boxRight"
+                  id="steps"
+                  src="img/step2alt.png"
+                  alt=""
+                />
               </div>
             </div>
           </div>
@@ -243,13 +254,13 @@
     <br />
     <div class="container">
       <div class="px-2">
-        <h3 style="color: #324a5e">
+        <h3 class="text-center" style="color: #324a5e">
           <span style="color: #6c8dd0">Professional</span>,
           <span style="color: #6c8dd0">licensed</span>, and
           <span style="color: #6c8dd0">vetted</span> therapists who you can
           trust
         </h3>
-        <h5 class="" style="color: #909090">
+        <h5 class="text-center" style="color: #909090">
           From some of the most prestigious institutions
         </h5>
       </div>
