--- a/index2.html
+++ b/index2.html
@@ -96,7 +96,7 @@
           <a
             id="joinuslanding"
             class="py-2"
-            style="font-size: 24px"
+            style="font-size: 28px; letter-spacing: 0.2px"
             href="http://api.whatsapp.com/send/?phone=13203481995&text=Hi"
             >Join us today</a
           >
@@ -107,9 +107,9 @@
     <div id="navpc" class="mx-0"></div>
 
     <div id="landing">
-      <div id="" class="">
+      <!-- <div id="" class="">
         <img src="/img/ryanXguido.png" class="w-100" alt="" />
-      </div>
+      </div> -->
       <div id="advice">
         <div class="container text-center">
           <p id="adviceText" class="py-2">
@@ -121,18 +121,18 @@
       <div id="landingImgBox" class="">
         <div id="insidelandingBox" class="">
           <div class="container">
-            <div style="height: 70px"></div>
+            <div style="height: 50px"></div>
             <p
               class="px-2"
               style="
-                font-size: 44px;
+                font-size: 24px;
                 font-weight: 700;
                 color: rgb(231, 231, 231);
               "
             >
-              Invest in your health with us
+              Invest in your health with us today for a healthier life
             </p>
-            <div style="height: 70px"></div>
+            <div style="height: 50px"></div>
           </div>
         </div>
       </div>
@@ -144,9 +144,16 @@
           <br id="mobnotbr" />
           <br id="mobnotbr" />
           <p class="m-0 me-0" id="guidotext">
-            Guido is a healthy lifestyle program that Just Fits with your
-            current lifestyle. It is the small incremental changes that we
-            belive makes the largest differece in the long term.
+            Guido is your motivating buddy that helps you lead a healthy
+            lifestyle.
+            <br />
+            <span class="text-dark">
+              Our easy to follow changes just fit into your current lifestyle
+              like the missing pieces of a jigsaw puzzle.
+            </span>
+            <br />
+            We believe these small stepping stones lead to larger success over
+            the lifetime.
           </p>
 
           <br />
@@ -919,6 +926,8 @@
               </p>
             </div>
           </div>
+          <br />
+          <br />
           <br />
           <br id="mobnotbr" />
           <br id="mobnotbr" />
