--- a/index2.html
+++ b/index2.html
@@ -920,7 +920,7 @@
                 <a
                   class="btn p-0 my-0"
                   style="font-weight: 600; color: #324a5e"
-                  href="https://www.instagram.com/guidolife"
+                  href="https://instagram.com/guido_health?utm_medium=copy_link"
                   ><i class="fab fa-instagram"></i
                 ></a>
               </p>
