--- a/index2.html
+++ b/index2.html
@@ -96,7 +96,7 @@
           <a
             id="joinuslanding"
             class="py-2"
-            style="font-size: 28px; letter-spacing: 0.2px"
+            style="font-size: 26px; letter-spacing: 0.2px"
             href="http://api.whatsapp.com/send/?phone=13203481995&text=Hi"
             >Join us today</a
           >
@@ -121,18 +121,18 @@
       <div id="landingImgBox" class="">
         <div id="insidelandingBox" class="">
           <div class="container">
-            <div style="height: 50px"></div>
+            <div style="height: 40px"></div>
             <p
-              class="px-2"
+              class="px-2 py-0 my-0"
               style="
-                font-size: 24px;
+                font-size: 20px;
                 font-weight: 700;
                 color: rgb(231, 231, 231);
               "
             >
               Invest in your health with us today for a healthier life
             </p>
-            <div style="height: 50px"></div>
+            <div style="height: 40px"></div>
           </div>
         </div>
       </div>
