--- a/index.html
+++ b/index.html
@@ -143,19 +143,17 @@
         <div class="col-md-6" id="landingLeft">
           <br id="mobnotbr" />
           <br id="mobnotbr" />
-          <p class="m-0 me-0" id="guidotext">
+          <p class="me-0 mb-1" id="guidotext">
             Guido is your motivating buddy that helps you lead a healthy
             lifestyle.
+          </p>
 
-            <br />
-            <br />
-
+          <p class="me-0 mb-1" id="guidotext">
             Our easy to follow changes just fit into your current lifestyle like
             the missing pieces of a jigsaw puzzle.
+          </p>
 
-            <br />
-            <br />
-
+          <p class="me-0 mb-1" id="guidotext">
             We believe these small stepping stones lead to larger success over
             the lifetime.
           </p>
