--- a/index.html
+++ b/index.html
@@ -113,26 +113,35 @@
       <div id="advice">
         <div class="container text-center">
           <p id="adviceText" class="py-2">
-            Not investing in health today cuts into your future profit : that is
-            how compounding works 😎
+            Guido is an easy to follow health plan that just fits your current
+            lifestyle! 😎
           </p>
         </div>
       </div>
       <div id="landingImgBox" class="">
         <div id="insidelandingBox" class="">
           <div class="container">
-            <div style="height: 40px"></div>
-            <p
-              class="px-2 py-0 my-0"
-              style="
-                font-size: 20px;
-                font-weight: 700;
-                color: rgb(231, 231, 231);
-              "
-            >
+            <div id="darkSpace"></div>
+            <p class="px-2 py-0 my-0" id="investText">
               Invest in your health with us today for a healthier life
             </p>
-            <div style="height: 40px"></div>
+            <div id="darkSpace"></div>
+            <div id="swipeUp">
+              <div class="row">
+                <div class="col-6">
+                  <p class="text-white pb-0 mb-0" style="line-height: 24px">
+                    swipe up
+                  </p>
+                  <h3 class="pt-0 mt-0 text-white" style="line-height: 30px">
+                    To explore
+                  </h3>
+                </div>
+                <div class="col-6 text-end">
+                  <img src="/img/swipeUp.svg" id="swipeBtn"  alt="" />
+                </div>
+              </div>
+            </div>
+            <br />
           </div>
         </div>
       </div>
@@ -151,11 +160,6 @@
           <p class="me-0 mb-1" id="guidotext">
             Our easy to follow changes just fit into your current lifestyle like
             the missing pieces of a jigsaw puzzle.
-          </p>
-
-          <p class="me-0 mb-1" id="guidotext">
-            We believe these small stepping stones lead to larger success over
-            the lifetime.
           </p>
 
           <br />
