--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                   </h3>
                 </div>
                 <div class="col-6 text-end">
-                  <img src="/img/swipeUp.svg" id="swipeBtn"  alt="" />
+                  <img src="/img/swipeUp.svg" id="swipeBtn" alt="" />
                 </div>
               </div>
             </div>
@@ -174,7 +174,7 @@
           <br />
           <img id="pose" class="w-100 px-1 pe-0" src="img/pose.png" alt="" />
           <div class="px-2 text-center" id="pose2">
-            <img class="w-75 px-0 pe-0" src="img/pose2new.png" alt="" />
+            <img class="w-75 px-0 pe-0 box" src="img/pose2new.png" alt="" />
           </div>
         </div>
       </div>
