--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
                       class="h-100 w-100"
                       style="
                         border-radius: 24px 0 24px 24px;
-                        background: #eef8f05b;
+                        background: #d3f3ff5b;
                       "
                     >
                       <h6
@@ -628,10 +628,10 @@
                         what to eat. The daily lessons make lifestyle choices a
                         breeze.
                       </h6>
-                      <br />
                       <h5 id="testimonyGiver" style="color: #324a5e">
                         <b>Sejal</b>
                       </h5>
+                      <!-- <small>24, Female</small> -->
                     </div>
                   </div>
                   <div class="col-md-6 pt-2">
@@ -667,7 +667,7 @@
                       class="h-100 w-100"
                       style="
                         border-radius: 24px 0 24px 24px;
-                        background: #eef8f05b;
+                        background: #d3f3ff5b;
                       "
                     >
                       <h6
@@ -687,7 +687,6 @@
                         routine. I have seen change in myself. The daily lessons
                         click when I face different scenarios.
                       </h6>
-                      <br />
                       <h5 id="testimonyGiver" style="color: #324a5e">
                         <b>Gurpreet</b>
                       </h5>
@@ -725,7 +724,7 @@
                       class="h-100 w-100"
                       style="
                         border-radius: 24px 0 24px 24px;
-                        background: #eef8f05b;
+                        background: #d3f3ff5b;
                       "
                     >
                       <h6
@@ -744,7 +743,6 @@
                         I like the overall program. The lessons are really
                         useful too.
                       </h6>
-                      <br />
                       <h5 id="testimonyGiver" style="color: #324a5e">
                         <b>Dr Nivedita</b>
                       </h5>
@@ -782,7 +780,7 @@
                       class="h-100 w-100"
                       style="
                         border-radius: 24px 0 24px 24px;
-                        background: #eef8f05b;
+                        background: #d3f3ff5b;
                       "
                     >
                       <h6
@@ -802,7 +800,6 @@
                         way she talks, listen and explains makes all the
                         difference.
                       </h6>
-                      <br />
                       <h5 id="testimonyGiver" style="color: #324a5e">
                         <b>Roma</b>
                       </h5>
