--- a/index3.html
+++ b/index3.html
@@ -272,7 +272,7 @@
           Therapists who you can trust
         </h3>
         <h5 class="text-center" style="color: #909090">
-          From some of the most prestigious institutions
+          From some of the most prestigious institutions.
         </h5>
       </div>
       <br />
